@@ -91,6 +91,13 @@
 #g nobody
 #group nobody
 
+# -I|--imap_capability:
+# Capabilities string returned when running the IMAP4 protocol
+# (default "IMAP4 IMAP4REV1")
+#I IMAP4 IMAP4REV1
+#imap_capability IMAP4
+
+
 # i|inetd_mode: 
 # Run in inetd mode
 #i
