@@ -105,6 +105,7 @@
 #else
 #define DEFAULT_GROUP                        "nobody"
 #endif /* WITH_GROUP */
+#define DEFAULT_IMAP_CAPABILITY              "IMAP4 IMAP4REV1"
 #define DEFAULT_INETD_MODE                   0
 #define DEFAULT_MAP_LIB \
   PERDITION_LIBDIR "/libperditiondb_gdbm.so.0"
@@ -149,6 +150,7 @@ typedef struct {
   int             domain_delimiter_length;
   char            *group;
   int             inetd_mode;
+  char            *imap_capability;
   int             timeout;
   char            *listen_port;
   char            *log_facility;
@@ -188,22 +190,23 @@ typedef struct {
 #define MASK_CONFIG_FILE                 (flag_t) 0x00000100
 #define MASK_GROUP                       (flag_t) 0x00000200
 #define MASK_INETD_MODE                  (flag_t) 0x00000400
-#define MASK_LOG_FACILITY                (flag_t) 0x00000800
-#define MASK_LISTEN_PORT                 (flag_t) 0x00001000
-#define MASK_LOWER_CASE                  (flag_t) 0x00002000
-#define MASK_MAP_LIB                     (flag_t) 0x00003000
-#define MASK_MAP_LIB_OPT                 (flag_t) 0x00008000
-#define MASK_NO_BIND_BANNER              (flag_t) 0x00010000
-#define MASK_NO_LOOKUP                   (flag_t) 0x00020000
-#define MASK_OUTGOING_PORT               (flag_t) 0x00040000
-#define MASK_OUTGOING_SERVER             (flag_t) 0x00080000
-#define MASK_PROTOCOL                    (flag_t) 0x00100000
-#define MASK_SERVER_OK_LINE              (flag_t) 0x00200000
-#define MASK_STRIP_DOMAIN                (flag_t) 0x00400000
-#define MASK_TIMEOUT                     (flag_t) 0x00800000
-#define MASK_USERNAME                    (flag_t) 0x01000000
-#define MASK_USERNAME_FROM_DATABASE      (flag_t) 0x02000000
-#define MASK_QUIET                       (flag_t) 0x04000000
+#define MASK_IMAP_CAPABILITY             (flag_t) 0x00000800
+#define MASK_LOG_FACILITY                (flag_t) 0x00001000
+#define MASK_LISTEN_PORT                 (flag_t) 0x00002000
+#define MASK_LOWER_CASE                  (flag_t) 0x00004000
+#define MASK_MAP_LIB                     (flag_t) 0x00008000
+#define MASK_MAP_LIB_OPT                 (flag_t) 0x00010000
+#define MASK_NO_BIND_BANNER              (flag_t) 0x00020000
+#define MASK_NO_LOOKUP                   (flag_t) 0x00040000
+#define MASK_OUTGOING_PORT               (flag_t) 0x00080000
+#define MASK_OUTGOING_SERVER             (flag_t) 0x00100000
+#define MASK_PROTOCOL                    (flag_t) 0x00200000
+#define MASK_SERVER_OK_LINE              (flag_t) 0x00400000
+#define MASK_STRIP_DOMAIN                (flag_t) 0x00800000
+#define MASK_TIMEOUT                     (flag_t) 0x01000000
+#define MASK_USERNAME                    (flag_t) 0x02000000
+#define MASK_USERNAME_FROM_DATABASE      (flag_t) 0x04000000
+#define MASK_QUIET                       (flag_t) 0x08000000
 
 #ifdef WITH_SSL_SUPPORT
 /* options_t.ssl_mask entries */
