@@ -135,6 +135,10 @@ Group to run as.
 .B \-h, \-\-help:
 Display this message
 .TP
+.B \-I, \-\-imap_capability:
+Capabilities string returned when running the IMAP4 protocol
+(default "IMAP4 IMAP4REV1")
+.TP
 .B \-i, \-\-inetd_mode:
 Run in inetd mode
 .TP
